    * vf_expand and vf_dsize now support aspect and round parameters

    MEncoder:
    * audio encoding modularized
    * AAC (FAAC) audio encoding
    * border processing adaptive quantization in libavcodec
    * encoding zones and luminance masking for XviD
    * raw audio muxer
    * fixed various bugs in the EDL code
    * x264 "turbo mode" to speed up first pass of multi-pass encoding
    * -delay allows real audio delay instead of just a delay in the header

    Ports:
    * improved timer function on Mac OS X
    * New Mac OS X "macosx" video output driver. Supported on OS X 10.4
      and 10.3 with QuickTime 7 (requires QuickTime 7 SDK to build on 10.3)
    * Mac OS X 10.4 (Tiger) fixes
    * macosx audio output driver fixes
    * support for playing DVDs copied to harddisk on Cygwin
    * DragonFly BSD support
    * liba52 asm optimizations ported to amd64

    Others:
    * enabled hinting for TrueType fonts
    * support for file:// syntax
    * -fb option removed, use the device suboption of -vo fbdev/fbdev2 instead
    * massive stream layer cleanup, all streams ported to the new API
    * full gcc 4 support for IA-32 and AMD-64 ports
    * TOOLS/vobshift.py: vobsub time-adjust tool
    * fixed auto-insertion of lavc encoder (for DXR2/3 and DVB)


  pre7try2: August 26, 2005

    Security:
    * heap overflow in PCM audio decoder fixed


  pre7: "PatentCounter" April 16, 2005

    Security:
    * heap overflow in Real RTSP streaming code fixed
    * buffer overflow in MMST streaming code fixed


    DOCS:
    * Czech documentation translation in progress
    * German man page almost synced
    * slave mode command documentation finished
    * TOOLS documented in TOOLS/README
    * audio filter documentation moved to the man page and updated
    * all audio filters documented
    * improved encoding guide
    * preliminary documentation for Snow codec in DOCS/tech/snow.txt
    * misc updates and fixes all over the place

    Ports: